# rex

./: .gitignore  Cargo.toml  Justfile  README.md  test.bats
.github/workflows/: rust.yml
src/: io.rs  main.rs  serializers.rs  utils.rs
