[package]
name = "rex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
regex = "1.8.4"
serde_json = "1.0.97"

[dev-dependencies]
test-case = "3.1.0"
